--- a/src/components/layout_customs.css
+++ b/src/components/layout_customs.css
@@ -46,6 +46,18 @@
     }
 }
 
+.portfolio-all{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-around;
+    flex-wrap: wrap;
+
+    border: 1px dashed black;
+    width: 90vw;
+    overflow-x: scroll;
+    margin: 0 4em 0 4em;
+}
+
 @media (max-width: 768px) {
     .about-component {
         flex-direction: column;
