--- a/src/components/card.css
+++ b/src/components/card.css
@@ -3,8 +3,8 @@
     flex-direction: column;
     justify-content: center;
 
-    width: 200px;
-    height: 200px;
+    width: 400px;
+    height: 360px;
 
     margin: 20px;
     cursor: pointer;
@@ -15,4 +15,11 @@
 .card-portfolio:hover {
     border: 4px solid rgb(68, 61, 61);
     transition: border-width 0.1s linear;
+}
+
+
+.bu{
+    width: 520px;
+    height: 480px;
+    border: 1px solid white;
 }
