--- a/src/components/layout_customs.css
+++ b/src/components/layout_customs.css
@@ -2,11 +2,13 @@
     justify-content: center !important;
     padding: 0;
     margin-bottom: 3em !important;
+
     >* {
         margin: 0 10px 0 2px;
         padding: 10px;
         cursor: pointer;
-        border: 1px solid transparent; /* Add this line */
+        border: 1px solid transparent;
+        /* Add this line */
     }
 
     >*:hover {
@@ -26,7 +28,7 @@
     flex-direction: column;
     justify-content: space-around;
     text-align: center;
-    
+
     >* {
         display: flex;
         width: 100%;
@@ -36,7 +38,7 @@
     }
 }
 
-.about-component{
+.about-component {
     display: flex;
     flex-direction: row;
 
@@ -46,16 +48,15 @@
     }
 }
 
-.portfolio-all{
+.portfolio-all {
     display: flex;
     flex-direction: row;
-    justify-content:space-around;
+    justify-content: center;
     flex-wrap: wrap;
 
     border: 1px dashed black;
-    width: 90vw;
+    width: 100%;
     overflow-x: scroll;
-    margin: 0 4em 0 4em;
 }
 
 @media (max-width: 768px) {
