--- a/src/components/layout_customs.css
+++ b/src/components/layout_customs.css
@@ -20,8 +20,29 @@
     .active {
         color: var(--color-primary);
     }
-
 }
+
+.dropdown {
+    display: block;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+    top: 50px;
+
+    >* {
+        margin: 10px;
+        cursor: pointer;
+        border-bottom: 1px solid black;
+    }
+
+    >*:hover {
+        color: var(--color-primary);
+    }
+}
+
 
 .about-main {
     display: flex;
