--- a/src/components/layout_customs.css
+++ b/src/components/layout_customs.css
@@ -16,17 +16,26 @@
         border-radius: 10px;
         transition: border-width 0.6s linear;
     }
-
+    
     .active {
         color: var(--color-primary);
     }
 }
 
+.search-bar{
+    opacity: 0.7;
+    border-radius: 10px;
+    height: 28px;
+    
+    >*:hover{
+        border: 1px solid wheat;
+    }
+}
 .dropdown {
     display: block;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
+    min-width: 240px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     padding: 12px 16px;
     z-index: 1;
