--- a/src/components/layout_customs.css
+++ b/src/components/layout_customs.css
@@ -7,13 +7,11 @@
         margin: 0 10px 0 2px;
         padding: 10px;
         cursor: pointer;
-        border: 1px solid transparent;
-        /* Add this line */
     }
 
     >*:hover {
-        border: 1px solid var(--color-primary);
         border-radius: 10px;
+        font-weight: bold;
         transition: border-width 0.6s linear;
     }
 
@@ -22,33 +20,21 @@
     }
 }
 
-.swiper {
-    width: 95%;
-    display: flex;
-    justify-content: baseline;
-    align-items: center;
-    vertical-align: middle;
-    margin: 0 auto;
-    
-    *> {
-        vertical-align: baseline;
-        justify-content: baseline;
-    }
-  }
-
-  
 .dropdown {
-    display: block;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
+    width: 90vw; /*100%*/
+    
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     padding: 12px 16px;
-    z-index: 1;
-    top: 50px;
+    top: 20px;
+    margin-top: 20px;
 
     >* {
-        margin: 10px;
+        margin: 0 10px;
         cursor: pointer;
         border-bottom: 1px solid black;
     }
@@ -64,7 +50,6 @@
     flex-direction: column;
     justify-content: space-around;
     text-align: center;
-
     >* {
         display: flex;
         width: 100%;
