--- a/src/components/layout_customs.css
+++ b/src/components/layout_customs.css
@@ -26,8 +26,9 @@
     justify-content: center;
     position: absolute;
     background-color: #f9f9f9;
-    width: 89%; /*100%*/
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    width: 89%;
+    /*100%*/
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 12px 16px;
     top: 20px;
     margin-top: 20px;
@@ -49,14 +50,19 @@
     justify-content: center;
     position: absolute;
     background-color: #f9f9f9;
-    width: 89%; /*100%*/
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    width: 89%;
+    /*100%*/
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 12px 16px;
     top: 20px;
     margin-top: 20px;
 
-    
+
     border-radius: 10px;
+
+    >* {
+        text-align: center;
+    }
 }
 
 @media (max-width: 768px) {
