dropdown2 search btn layout

--- a/src/components/layout_customs.css
+++ b/src/components/layout_customs.css
@@ -61,7 +61,8 @@
     border-radius: 10px;
 
     >* {
-        text-align: center;
+        width: 100%;
+        align-items: baseline;
     }
 }
 
