--- a/src/components/layout_customs.css
+++ b/src/components/layout_customs.css
@@ -22,26 +22,34 @@
 
 .dropdown {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     position: absolute;
     background-color: #f9f9f9;
-    width: 89%;
+    width: 300px;
     /*100%*/
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 12px 16px;
     top: 20px;
     margin-top: 20px;
+    z-index: 10;
+    border-radius: 10px;
 
     >* {
         margin: 0 10px;
         cursor: pointer;
         border-bottom: 1px solid black;
+        font-weight: normal;
+        padding: 4px;
     }
 
+
     >*:hover {
-        color: var(--color-primary);
+        color: black;
+        font-weight: bold;
+        background-color: aliceblue;
     }
+
 }
 
 .dropdown2 {
@@ -50,21 +58,34 @@
     justify-content: center;
     position: absolute;
     background-color: #f9f9f9;
-    width: 89%;
-    /*100%*/
+    width: 280px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     padding: 12px 16px;
     top: 20px;
     margin-top: 20px;
-
+    z-index: 10;
 
     border-radius: 10px;
 
-    >* {
-        width: 100%;
-        align-items: baseline;
-    }
+    align-items: center;
 }
+
+.title-opacity {
+    color: black;
+    /* background-color: #ffffff; */
+}
+
+.search-bar {
+    background-color: rgb(219, 226, 224);
+    width: 200px;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 0 20px 0 20px;
+    text-align: center;
+    color: #000000;
+}
+
+
 
 @media (max-width: 768px) {
     .about-component {
