migration from alicia is good. now we need the create page for each node

--- a/src/components/layout_customs.css
+++ b/src/components/layout_customs.css
@@ -63,7 +63,7 @@
     padding: 12px 16px;
     top: 20px;
     margin-top: 20px;
-    z-index: 10;
+    z-index: 8;
 
     border-radius: 10px;
 
@@ -76,7 +76,7 @@
 }
 
 .search-bar {
-    background-color: rgb(219, 226, 224);
+    background-color: rgb(241, 235, 235);
     width: 200px;
     border: 1px solid black;
     border-radius: 10px;
@@ -85,7 +85,19 @@
     color: #000000;
 }
 
+.back-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid rgb(138, 130, 130);
+    border-radius: 10px;
+    margin-bottom: 10px;
+    padding: 8px;
 
+    &:hover {
+        background: rgb(133, 129, 129); 
+    }
+}
 
 @media (max-width: 768px) {
     .about-component {
