--- a/src/components/layout_customs.css
+++ b/src/components/layout_customs.css
@@ -1,8 +1,9 @@
 .navbar {
     justify-content: center !important;
     padding: 0;
+    margin-top: 20px;
     margin-bottom: 20px;
-
+    font-size: 18px;
     >* {
         margin: 0 20px 0 20px;
         padding: 10px;
@@ -13,6 +14,7 @@
         border-radius: 10px;
         font-weight: bold;
         transition: border-width 0.6s linear;
+        
     }
 
     .active {
@@ -25,7 +27,7 @@
     flex-direction: column;
     justify-content: center;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: white;
     width: 300px;
     /*100%*/
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -56,17 +58,15 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    position: absolute;
-    background-color: #f9f9f9;
-    width: 280px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    padding: 12px 16px;
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 200px;
     top: 20px;
+    margin-right: 10em;
     margin-top: 20px;
     z-index: 8;
-
     border-radius: 10px;
-
     align-items: center;
 }
 
