--- a/src/components/about.css
+++ b/src/components/about.css
@@ -17,13 +17,22 @@
     flex-direction: row;
 
     >* {
-        margin: 10px;
+        margin: 25px;
         cursor: pointer;
     }
+}
+
+.about-title{
+    padding: 1em;
+    margin-left: 2em;
+    margin-right: 2em;
 }
 
 @media (max-width: 768px) {
     .about-component {
         flex-direction: column;
+    }
+    .about-title{
+        max-width: 480px;
     }
 }
