--- a/src/components/card_portfolio.css
+++ b/src/components/card_portfolio.css
@@ -31,3 +31,12 @@
     width: 100%;
     overflow-x: scroll;
 }
+
+@media (hover: hover) and (pointer: fine) {
+    .card-portfolio:hover {
+      transition: ease-out 1s;
+      font-weight: bold;
+      color: rgba(0, 0, 0, 1); 
+      background-image: none !important;
+    }
+  }
