--- a/src/components/info.css
+++ b/src/components/info.css
@@ -2,18 +2,13 @@
     display: flex;
     flex-direction: row;
     justify-content:center;
+    gap: 5em;
+    margin-left: 6em;
     align-items: center;
-
-    >* {
-        margin: 0em 1em 4em 1em;
-    }
 }
 
 .info-icons{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    align-self: flex-start;
     >*{
         text-align: center;
         align-content: center;
@@ -31,8 +26,11 @@ form input, form select, form textarea {
 @media (max-width: 768px) {
     .info {
         flex-direction: column;
+        gap: 4em;
+        margin-left: 0em;
     }
     .info-icons{
         flex-direction: column;
+        align-self: center;
     }
 }
