--- a/src/components/layout_customs.css
+++ b/src/components/layout_customs.css
@@ -3,9 +3,10 @@
     padding: 0;
     margin-top: 20px;
     margin-bottom: 20px;
+    max-width: 100vw;
     font-size: 18px;
     >* {
-        margin: 0 15px 0 15px;
+        margin: 0 18px 0 18px;
         padding: 10px;
         cursor: pointer;
     }
@@ -90,5 +91,12 @@
 
     &:hover {
         background: rgb(133, 129, 129); 
+    }
+}
+
+
+@media (max-width: 768) {
+    .navbar >* {
+        margin: 0 5px 0 5px;
     }
 }
