alignment and colorbackground for card and contact form

--- a/src/components/card_portfolio.css
+++ b/src/components/card_portfolio.css
@@ -29,7 +29,7 @@
 }
 
 .card-portfolio:hover::before {
-  background: white; /* Transition to white background */
+  background: #F7F1EE; /* Transition to white background */
   opacity: 1; /* Make the pseudo-element visible */
 }
 
