--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -16,7 +16,8 @@ footer{
     padding: 10px;
     margin: 0 2px 0 2px;
     opacity: 0.6;
-
+    text-decoration: none;
+    
     &:hover{
         opacity: 1;
         transform: scale(1.2);
