--- a/src/components/card_portfolio.css
+++ b/src/components/card_portfolio.css
@@ -28,15 +28,17 @@
   z-index: 0; /* Ensure pseudo-element is behind the text */
 }
 
-.card-portfolio:hover::before {
-  background: #F7F1EE; /* Transition to white background */
-  opacity: 1; /* Make the pseudo-element visible */
-}
+@media (max-width: 980px) {
+  .card-portfolio:hover::before {
+      background: #F7F1EE; /* Transition to white background */
+      opacity: 1; /* Make the pseudo-element visible */
+  }
 
-.card-portfolio:hover {
-  font-weight: bold;
-  color: rgba(0, 0, 0, 1); /* Change text color */
-  opacity: 1; /* Make the text fully opaque */
+  .card-portfolio:hover {
+      font-weight: bold;
+      color: rgba(0, 0, 0, 1); /* Change text color */
+      opacity: 1; /* Make the text fully opaque */
+  }
 }
 
 .card-portfolio > * {
