--- a/src/components/card_portfolio.css
+++ b/src/components/card_portfolio.css
@@ -45,7 +45,7 @@
   position: relative;
   z-index: 1; /* Ensure text and other content are above the pseudo-element */
 }
-
+  
 .portfolio-all {
   display: flex;
   flex-direction: row;
@@ -59,5 +59,6 @@
 @media (min-width: 980px) {
   .card-portfolio:hover::before {
       opacity: 1; /* Make the pseudo-element visible */
+      color: rgba(0, 0, 0, 1); /* Change text color */
   }
 }
