--- a/src/components/layout_customs.css
+++ b/src/components/layout_customs.css
@@ -1,12 +1,15 @@
 .navbar {
-    justify-content: center !important;
+    justify-content: center;
     padding: 0;
     margin-top: 20px;
     margin-bottom: 20px;
     max-width: 100vw;
     font-size: 18px;
+
     >* {
-        margin: 0 18px 0 18px;
+        display: flex;
+        flex-direction: row;
+        margin: 0 10px 0 10px;
         padding: 10px;
         cursor: pointer;
     }
@@ -94,9 +97,8 @@
     }
 }
 
-
 @media (max-width: 768px) {
     .navbar >* {
-        margin: 0 5px 0 5px;
+        margin: 0 4px 0 7px;
     }
 }
