card hover mobile

--- a/src/components/card_portfolio.css
+++ b/src/components/card_portfolio.css
@@ -62,3 +62,9 @@
       color: rgba(0, 0, 0, 1); /* Change text color */
   }
 }
+
+@media (max-width: 980px) {
+  .card-portfolio{
+    opacity: 0.6;
+  }
+}
