--- a/src/components/card_portfolio.css
+++ b/src/components/card_portfolio.css
@@ -64,7 +64,8 @@
 }
 
 @media (max-width: 980px) {
-  .card-portfolio{
-    opacity: 0.6;
+  .card-portfolio {
+    opacity: 0.4; /* Adjust the opacity for smaller screens */
+    color: rgba(0, 0, 0, 1); /* Change text color if needed */
   }
 }
