--- a/src/components/card_portfolio.css
+++ b/src/components/card_portfolio.css
@@ -1,20 +1,3 @@
-.card-portfolio {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: relative; /* Added to position pseudo-element */
-  width: 400px;
-  height: 360px;
-  margin: 20px;
-  cursor: pointer;
-  border-radius: 4px;
-  opacity: 0.8;
-  color: rgba(0, 0, 0, 0); 
-  font-size: 38px;
-  transition: color ease-out 2s, font-weight ease-out 2s; /* Specify transitions for text properties */
-}
-
 .card-portfolio::before {
   content: '';
   position: absolute;
@@ -25,27 +8,26 @@
   background: inherit; /* Use the same background as the card */
   border-radius: inherit;
   transition: background-color ease-out 2s, opacity ease-out 2s; /* Specify transitions for background */
-  z-index: 0; /* Ensure pseudo-element is behind the text */
+  z-index: 2; /* Ensure pseudo-element is behind the text */
 }
 
-@media (min-width: 980px) {
-  .card-portfolio:hover::before {
-      background: #F7F1EE; /* Transition to white background */
-      opacity: 1; /* Make the pseudo-element visible */
-  }
-
-  .card-portfolio:hover {
-      font-weight: bold;
-      color: rgba(0, 0, 0, 1); /* Change text color */
-      opacity: 1; /* Make the text fully opaque */
-  }
+.card-portfolio-opacity {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.5); /* Change the color and opacity as needed */
+    z-index: 3;
 }
 
-.card-portfolio > * {
-  position: relative;
-  z-index: 1; /* Ensure text and other content are above the pseudo-element */
+#card-title{
+  font-size: 38px;
+  z-index: 4;
+  position: relative; /* Add this to enable z-index */
+  color: rgb(0, 0, 0);
 }
-  
+
 .portfolio-all {
   display: flex;
   flex-direction: row;
@@ -58,14 +40,17 @@
 
 @media (min-width: 980px) {
   .card-portfolio:hover::before {
+      background: #F7F1EE; /* Transition to white background */
       opacity: 1; /* Make the pseudo-element visible */
-      color: rgba(0, 0, 0, 1); /* Change text color */
+  }
+
+  .card-portfolio:hover {
+      font-weight: bold;
   }
 }
 
 @media (max-width: 980px) {
-  .card-portfolio {
-    opacity: 0.4; /* Adjust the opacity for smaller screens */
-    color: rgba(0, 0, 0, 1); /* Change text color if needed */
+  .card-portfolio-opacity{
+    background-color: rgba(255, 255, 255, 0.6); /* Change the color and opacity as needed */
   }
 }
