--- a/src/components/card_portfolio.css
+++ b/src/components/card_portfolio.css
@@ -1,3 +1,10 @@
+.card-portfolio {
+  position: relative;
+  border-radius: 4px;
+  transition: transform 0.3s ease-in-out;
+  overflow: hidden; /* Ensure child elements do not overflow the card */
+}
+
 .card-portfolio::before {
   content: '';
   position: absolute;
@@ -5,26 +12,27 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: inherit; /* Use the same background as the card */
+  background: inherit;
   border-radius: inherit;
-  transition: background-color ease-out 2s, opacity ease-out 2s; /* Specify transitions for background */
-  z-index: 2; /* Ensure pseudo-element is behind the text */
+  z-index: 1;
+  transition: background-color ease-out 2s, opacity ease-out 2s;
 }
 
 .card-portfolio-opacity {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.5); /* Change the color and opacity as needed */
-    z-index: 3;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.5);
+  z-index: 2;
+  transition: background-color 1.4s ease-in-out; /* Add transition for background color */
 }
 
-#card-title{
+#card-title {
   font-size: 38px;
-  z-index: 4;
-  position: relative; /* Add this to enable z-index */
+  z-index: 3;
+  position: relative;
   color: rgb(0, 0, 0);
 }
 
@@ -40,17 +48,20 @@
 
 @media (min-width: 980px) {
   .card-portfolio:hover::before {
-      background: #F7F1EE; /* Transition to white background */
-      opacity: 1; /* Make the pseudo-element visible */
+    background: none; /* Remove background to avoid layering effect */
+  }
+
+  .card-portfolio:hover .card-portfolio-opacity {
+    background-color: #F7F1EE; /* Apply the exact background color */
   }
 
   .card-portfolio:hover {
-      font-weight: bold;
+    font-weight: bold;
   }
 }
 
 @media (max-width: 980px) {
-  .card-portfolio-opacity{
-    background-color: rgba(255, 255, 255, 0.6); /* Change the color and opacity as needed */
+  .card-portfolio-opacity {
+    background-color: rgba(255, 255, 255, 0.6);
   }
 }
